--- a/transformer/config/config.yaml
+++ b/transformer/config/config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
-  - model: gkt 
-  - satellite_model: cvt_satellite
+  - model: gkt_nuscenes
+  - satellite_model: cvt_satellite_nuscenes
   - data: kitti_360
   - visualization: null
 
