update correct googleMapDownloader_nuscenes.py to get ego_pose

--- a/transformer/config/config.yaml
+++ b/transformer/config/config.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   - model: gkt_nuscenes
   - satellite_model: cvt_satellite_nuscenes
-  - data: kitti_360
+  - data: nuscenes_vehicle
   - visualization: null
 
   - loss: default_loss        # Default: use ... /config/loss/default_loss.yaml
