batch_size=1 version succeeded

--- a/transformer/config/highlyaccurate/default_highlyacc.yaml
+++ b/transformer/config/highlyaccurate/default_highlyacc.yaml
@@ -49,14 +49,20 @@ beta2: 0.999
 use_default_model: 0
 use_transformer: True
 
+version: "v1.0-mini"
+# version: "v1.0-trainval" # or v1.0-mini (Only 10 scenes)
 # For nuscenes_dataset.py
-# TODO: Change labels to my satmap!
 dataset_dir: "/home/goroyeh/nuScene_dataset/media/datasets/nuscenes"
 labels_dir : "/home/goroyeh/nuScene_dataset/media/datasets/cvt_labels_nuscenes"
+root_dir:  "/home/goroyeh/nuScene_dataset/"
 
+# On /mnt/workspace/datasets/ :
+# dataset_dir: "/mnt/workspace/datasets/nuScene_dataset/media/datasets/nuscenes"
+# root_dir:  "/mnt/workspace/datasets/nuScene_dataset/" # satmap/ or samples
+# labels_dir : "/home/goroyeh/nuScene_dataset/media/datasets/cvt_labels_nuscenes/" # Actually, not used!
 
 loader:
-  batch_size: 4
+  batch_size: 1
   num_workers: 4
   pin_memory: True
   prefetch_factor: 45
