--- a/transformer/config/config.yaml
+++ b/transformer/config/config.yaml
@@ -21,11 +21,12 @@ experiment:
   log_image_interval: 500
   ckptt: "-"
 
-loader:
-  batch_size: 4
-  num_workers: 4
-  pin_memory: True
-  prefetch_factor: 45
+# loader:
+#   batch_size: 1
+#   # batch_size: 4
+#   num_workers: 4
+#   pin_memory: True
+#   prefetch_factor: 45
 
 # AdamW
 optimizer:
