--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,7 +25,7 @@ RUN pip install torchtext==0.12.0
 # For cv2
 RUN apt-get update && apt-get install -y --no-install-recommends \
         libgl1 \
-        libglib2.0-0 \
+        libglib2.0-0 
 # Nuscene
 RUN pip install nuscenes-devkit
 
