--- a/transformer/config/highlyaccurate/default_highlyacc.yaml
+++ b/transformer/config/highlyaccurate/default_highlyacc.yaml
@@ -2,12 +2,12 @@ resume: 0
 test: 0
 localize: 0 
 debug: 0 
-epochs: 1
-lr: 0.0001
+epochs: 5
+lr: 4e-3 #0.0001 (1e-4)
 stereo: 0 
 sequence: 1 
 
-batch_size: 1
+
 direction: "S2GP"
 rotation_range: 10.
 shift_range_lat: 20.
@@ -65,8 +65,4 @@ GrdImg_H: ${data.image.h}
 GrdImg_W: ${data.image.w}
 
 
-loader:
-  batch_size: 1
-  num_workers: 4
-  pin_memory: True
-  prefetch_factor: 45
+loader: ${loader}
