pass cfg.data to nuscenes_dataset.py
Working on resize

Finished resize

Debugged resize

Test changing commmit msg

--- a/transformer/config/data/nuscenes.yaml
+++ b/transformer/config/data/nuscenes.yaml
@@ -4,8 +4,8 @@ num_classes: 12                         # do not modify :)
 # used to get_split
 # version: 'v1.0-trainval'                # 'v1.0-mini' for debugging
 version: 'v1.0-mini'                # 'v1.0-mini' for debugging
-dataset_dir: ???
-labels_dir: ???
+# dataset_dir: ???
+# labels_dir: ???
 
 # used to generate dataset
 cameras: [[0, 1, 2, 3, 4, 5]]
@@ -36,7 +36,7 @@ image:
   top_crop: 46
 
 satellite_image:
-  h: 512
-  w: 512
+  h: 1280
+  w: 1280
 
 zoom_level: 18
