--- a/transformer/config/model/gkt_nuscenes.yaml
+++ b/transformer/config/model/gkt_nuscenes.yaml
@@ -1,10 +1,12 @@
 _target_: transformer.cross_view_transformer.model.cvt.CrossViewTransformer
 
+level: 3
+decoder_block_channels: ${model.decoder.blocks}
 dim_last: 64
-# dim_last: 56
+bev_h: ${model.encoder.bev_embedding.bev_height}
 
 outputs:
-  bev: [0, 10] # rgb: 0,1,2
+  bev: [0, 256] # rgb: 0,1,2 Note: this is not used now.
 
 encoder:
   _target_: transformer.cross_view_transformer.model.geometry_kernel_transformer_encoder_nuscenes.GeometryKernelEncoder
@@ -56,7 +58,7 @@ decoder:
 
   dim: ${model.encoder.dim}
   # blocks: [128, 128, 64]
-  blocks: [128, 128, 64]
+  blocks: [256, 128, 64]
   # level 1: 256, 2: 128, 3: 64
   residual: True
   factor: 2
